kubernetes/grafana/grafana-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: grafana
  name: grafana
