kubernetes/grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grafana
      annotations:
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
        use-metadata.version-checker.io/grafana: "true"
    spec:
      securityContext:
        fsGroup: 11472
        runAsGroup: 11472
        runAsUser: 11472
        runAsNonRoot: true
        supplementalGroups:
          - 0
      hostname: grafana
      restartPolicy: Always
      automountServiceAccountToken: false
      serviceAccountName: grafana-sa
      containers:
        - image: grafana/grafana:8.3.0
          imagePullPolicy: IfNotPresent
          name: grafana
          securityContext:
            runAsGroup: 11472
            runAsUser: 11472
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - all
          ports:
            - containerPort: 3000
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 60
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
          resources:
            requests:
              memory: "100M"
              cpu: "75m"
            limits:
              memory: "200M"
              cpu: "150m"
          volumeMounts:
            - name: grafana-pvc
              mountPath: /var/lib/grafana/
      volumes:
        - name: grafana-pvc
          persistentVolumeClaim:
            claimName: grafana-pvc
